--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-/*------------- Header Style ---------------*/
+/*------------- Header Layout ---------------*/
 .header {
     background-color: var(--page-color);
     align-self: start;
@@ -66,19 +66,121 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: max-content max-content;
+    gap: 1rem;
 }
 
-/*------------- Header Style ---------------*/
 .header > div{
     display: flex;
+    align-items: center;
+    padding-right: 1rem;
 }
 
-header .crud-proyect .proyect-btns,
-.header .search + div {
+.search {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-right: auto;
+}
+
+.crud-project .project-btns {
     margin-left: auto;
 }
 
+.header .search + div{
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.8rem;
+}
 
+
+/*------------- Header Style ---------------*/
+/*---First row ----*/
+.search label img{
+    display: inline;
+}
+
+.search input {
+    font-family: inherit;
+    font-size: 1.2rem;
+    width: 80%;
+    outline: none;
+    border: 0px solid;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    background-color: var(--main-bg-color);
+}
+
+.search input:focus,
+.search input:hover {
+    outline: 2px solid black;
+}
+
+.header .search + div > img{
+    height: 1.8rem;
+}
+
+.header .user-image {
+    width: 3rem;
+    height: 3rem;
+}
+
+/*---Second row ----*/
+.user-information {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.crud-project  .user-information .user-image {
+    width: 4rem;
+    height: 4rem;
+}
+
+.user-information p span {
+    font-weight: bold;
+}
+
+.user-information p span:nth-child(1) {
+    font-size: 1rem;
+}
+
+.user-information p span:nth-of-type(2) {
+    font-size: 1.5rem;
+}
+
+.project-btns {
+    display: flex;
+    gap: 1.3rem;
+}
+
+.project-btns > button {
+    font-weight: bold;
+    font-size: 1.3rem;
+    padding: 0.1em 1.2em;
+    color: var(--main-bg-color);
+    background-color: var(--side-bar-color);
+    outline: none;
+    border: 0px solid;
+    border-radius: 18px;
+    cursor: pointer;
+}
+
+.project-btns > button:active {
+    outline: 2px solid black;
+}
+
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+    overflow: hidden;
+    background-color: aqua;
+}
 
 
 
@@ -119,7 +221,7 @@ display: grid;
 
 .side-bar li {
     display: grid;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: max-content max-content;
     gap: 1rem;
     margin-bottom: 5px;
 }
