--- a/style.css
+++ b/style.css
@@ -53,6 +53,17 @@ h1, h2, h3, h4, h5, h6 {
     --side-bar-color: #1b56fd;
     --main-bg-color: #e9dfc3;
     --icon-color: brightness(0) saturate(100%) invert(90%) sepia(17%);
+
+    font-family: 'robotoregular', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('./assets/fonts/roboto-regular-webfont.woff2') format('woff2'),
+         url('./assets/fonts/roboto-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 
@@ -179,7 +190,6 @@ h1, h2, h3, h4, h5, h6 {
     border: 1px solid black;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
     overflow: hidden;
-    background-color: aqua;
 }
 
 
@@ -230,14 +240,125 @@ display: grid;
 
 
 
+/*------------- Main Layout ---------------*/
+.main {
+    display: grid;
+    grid-template-columns: 2fr minmax(100px, 250px);
+    gap: 14px;
+}
+
+.your-project,
+.announcements-trending {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.card-container {
+    flex-grow: 1;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+    gap: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.card-images {
+    margin-top: 12px;
+    flex-grow: 1;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    gap: 14px;
+}
+
+.announcements {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.trending > div{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+}
+
 /*------------- Main Style ---------------*/
 .main {
     background-color: var(--main-bg-color);
+    padding: 1rem;
 }
 
 
+.card {
+    position: relative;
+    min-height: 150px;
+    background-color: var(--page-color);
+    border-left: 1vw solid var(--side-bar-color);
+    border-radius: 10px;
+    padding: 1.5rem;
+}
 
-/*------------- Main Layout -------------- */
+.card-images > img {
+    display: inline-block;
+    height: 24px;
+}
+
+.card:hover {
+    top: -2px;
+    box-shadow: 0 4px 5px rgba(0,0,0,0.2);
+}
+
+.announcements {
+    background-color: var(--page-color);
+    flex: 1;
+    border-radius: 10px;
+    padding: 1.5rem;
+}
+
+.announcements div:not(:last-child) p {
+    border-bottom: 1px solid black;
+}
+
+.announcements > div p {
+    font-size: 0.8rem;
+}
+
+.trending {
+    background-color: var(--page-color);
+    flex: 1;
+    border-radius: 10px;
+    padding: 1.5rem;
+}
+
+.trending .user-image{
+    max-height: 60px;
+    max-width: 60px;
+}
+
+.trending > div p {
+    font-size: 0.9rem;
+}
+
+.trending > div p span:first-of-type {
+    font-weight: bold;
+}
+
+
+/*------------- Page Layout -------------- */
 .container {
     height: 100vh;
     width: 100vw;
